--- a/hw_02/index.html
+++ b/hw_02/index.html
@@ -16,7 +16,7 @@
     <p>
         Meow meow meow <b><i>meow</i></b> meow...
     </p>
-    <img src="img/cat.jpg" alt="Harvey the cat with hd emblem" width="400">
+    <img src="img/cat.jpg" alt="Harvey the cat with hd emblem">
 
     <h3>Meow:</h3>
     <ul>
@@ -32,6 +32,6 @@
         <li>meow meow meow</li>
     </ol>
     <hr>
-    <a href="https://en.wikipedia.org/wiki/Cat"><img src="https://thebiologist.rsb.org.uk/images/biologist/Cats_genetics.jpg" alt="Cats image" width="400"></a>
+    <a href="https://en.wikipedia.org/wiki/Cat"><img src="https://thebiologist.rsb.org.uk/images/biologist/Cats_genetics.jpg" alt="Cats image"></a>
 </body>
 </html>
